commit10// прикручиваем логин контроллер

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Резерв столов. Главная</title>
 </head>
 <body>
 
@@ -12,7 +12,12 @@
         <li><a href="/user/login">Вход пользователя</a></li>
         <li><a href="/user/add">Регистрация пользователя</a></li>
         <li><a href="/restaurant/login">Вход администратора ресторана</a></li>
+
+
         <li><a href="/restaurant/add">Регистрация ресторана</a></li>
+        <li><a href="/restaurant/showReserve">Просмотр забронированных столов</a></li>
+
+
         <li><a href="/reserve/add">Резервация стола</a></li>
         <!--<li></li>-->
     </ul>
