commit10// прикручиваем логин контроллер

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,9 +9,8 @@
 <nav>
     <ul>
 
-
         <li><a href="/user/login">Вход пользователя</a></li>
-        <li><a href="/registerUser">Регистрация пользователя</a></li>
+        <li><a href="/user/add">Регистрация пользователя</a></li>
         <li><a href="/restaurant/login">Вход администратора ресторана</a></li>
 
 
@@ -20,8 +19,6 @@
 
 
         <li><a href="/reserve/add">Резервация стола</a></li>
-        <li><a href="/restaurantSearch">Поиск ресторана</a></li>
-
         <!--<li></li>-->
     </ul>
 </nav>
