commit12// Основной функционал работает, delete не взлетает

--- a/src/main/resources/templates/admin/show_reserve.html
+++ b/src/main/resources/templates/admin/show_reserve.html
@@ -37,6 +37,8 @@
             <td th:text="${item.user.name}"></td>
         </tr>
     </th:block>
+
+    <p><a href="/">На главную</a></p>
 </table>
 </body>
 </html>
