--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Резерв столов. Главная</title>
@@ -18,6 +18,7 @@
 
         <li  sec:authorize="hasAuthority('ADMIN')"><a href="/restaurant/add">Регистрация ресторана</a></li>
         <li  sec:authorize="hasAuthority('ADMIN')"><a href="/restaurant/showReserve">Просмотр забронированных столов</a></li>
+        <li  sec:authorize="hasAuthority('ADMIN')"><a href="/restaurant/deleteReserve">Удаление брони</a></li>
 
 
         <li  sec:authorize="hasAuthority('USER')"><a href="/reserve/add">Резервация стола</a></li>
