--- a/src/main/resources/templates/user/add_reserve.html
+++ b/src/main/resources/templates/user/add_reserve.html
@@ -2,42 +2,104 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Бронирование стола</title>
+    <title>Бронирование столика</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+
+    <!-- Fonts -->
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+          rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic"
+          rel="stylesheet" type="text/css">
 </head>
 <body>
 
-<p th:if="${reserveInfo}">Бронь стола в ресторане
-    <span  th:text="${reserveInfo}" style="color:red"></span>
-    сделана
-</p>
-<h3>Ввод данных для резерва</h3>
+
+<div class="jumbotron">
+    <h1 class="display-4">Бронирование столика</h1>
+    <p class="lead">Выберете ресторан и забронируйте столик на желаемое время</p>
+    <hr class="my-4">
+    <p th:if="${reserveInfo}">Бронь стола в ресторане
+        <span th:text="${reserveInfo}" style="color:red"></span>
+        сделана
+    </p>
 
 
-<!--<form method="get" th:action="@{/reserve/add}" th:object="${restaurant}"></form>-->
-<form action="#"  th:action="@{/reserve/add}" th:object="${reserve}" method="post">
+    <form action="#" th:action="@{/reserve/add}" th:object="${reserve}" method="post">
 
-    <!--<label>ВВедите Имя <input th:field="*{visitorName}" type="text"></label></br>-->
-    <div>
-        <select name="restaurant">
-            <option th:each="restaurant : ${restaurant}"
-                    th:value="${restaurant.restaurantId}"
-                    th:utext="${restaurant.restaurantName}">
-            </option>
-        </select>
-    </div>
+        <div class="form-group row">
+            <label for="visitorsVolume" class="col-sm-2 col-form-label">Количество гостей</label>
+            <div class="col-sm-10">
+                <input th:name="visitorsVolume" type="text" class="form-control" id="visitorsVolume" placeholder="4">
+            </div>
+        </div>
 
-    <label>Количество гостей <input th:name="visitorsVolume"  type="text"></label></br>
+        <div class="form-group row">
+            <label for="restaurant" class="col-sm-2 col-form-label">Ресторан</label>
+            <div class="col-sm-10">
+                <select name="restaurant" id="restaurant" class="form-control">
+                    <option selected>Выберите ресторан...</option>
+                    <option th:each="restaurant : ${restaurant}"
+                            th:value="${restaurant.restaurantId}"
+                            th:utext="${restaurant.restaurantName}">
+                    </option>
+                </select>
+            </div>
+        </div>
 
-    <div> <p>Ввод даты и времени: <input th:name="reserveStart"  type="datetime-local" >
+        <div class="form-group row">
+            <label for="reserveStart" class="col-sm-2 col-form-label">Выбор даты и времени</label>
+            <div class="col-sm-10">
+                <input th:name="reserveStart" id="reserveStart" type="datetime-local">
 
-    <hr>
-    <p><input type="submit" value="Проверить бронь"></p>
+            </div>
 
-    </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-sm-10">
+                <button type="submit" class="btn btn-primary">Забронировать</button>
+            </div>
+        </div>
+    </form>
+</div>
 
-</form>
+
+<!--&lt;!&ndash;<form method="get" th:action="@{/reserve/add}" th:object="${restaurant}"></form>&ndash;&gt;-->
+<!--<form action="#"  th:action="@{/reserve/add}" th:object="${reserve}" method="post">-->
+
+<!--    &lt;!&ndash;<label>ВВедите Имя <input th:field="*{visitorName}" type="text"></label></br>&ndash;&gt;-->
+<!--    <div>-->
+<!--        <select name="restaurant">-->
+<!--            <option th:each="restaurant : ${restaurant}"-->
+<!--                    th:value="${restaurant.restaurantId}"-->
+<!--                    th:utext="${restaurant.restaurantName}">-->
+<!--            </option>-->
+<!--        </select>-->
+<!--    </div>-->
+
+<!--    <label>Количество гостей <input th:name="visitorsVolume"  type="text"></label></br>-->
+
+<!--    <div> <p>Ввод даты и времени: <input th:name="reserveStart"  type="datetime-local" >-->
+
+<!--        <hr>-->
+<!--        <p><input type="submit" value="Проверить бронь"></p>-->
+
+<!--    </div>-->
+
+<!--</form>-->
 
 <p><a href="/">На главную</a></p>
-<!--<script src="/js/tables.js"></script>-->
+
 </body>
 </html>
