--- a/src/main/resources/templates/user/add_reserve_success.html
+++ b/src/main/resources/templates/user/add_reserve_success.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Столик зарезервирован</title>
+    <title>Бронирование столика</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+
+    <!-- Fonts -->
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+          rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic"
+          rel="stylesheet" type="text/css">
 </head>
 <body>
 
 
-<p>
-    Столик зарезервирован!
-</p>
+<div class="jumbotron">
+    <h1 class="display-4">Стол зарезервирован!</h1>
+    <p class="lead">Хорошего отдыха, не забудьте оставить отзыв после посещения ресторана</p>
+    <hr class="my-4">
+    <p>Если больше не требуется осуществить бронь, пожалуйста, совершите выход из системы</p>
+    <p class="lead">
+        <a class="btn btn-primary btn-lg" href="/logout" role="button">Выход</a>
+    </p>
 
-<nav>
-    <ul>
-
-        <li><a href="/">На главную</a></li>
-
-    </ul>
-</nav>
-
+</div>
+<p><a href="/">На главную</a></p>
 </body>
 </html>
