commit14// Новый интерфейс

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,8 @@
 
 
 <div class="jumbotron">
-    <h1 class="display-3">Добро пожаловать на главную страницу сервиса по резервированию столов</h1>
+    <h1 class="display-3">Домашняя страница</h1>
+    <p class="lead">Добро пожаловать на главную страницу сервиса по резервированию столов></span> </p>
     <p class="lead">Ваш логин: <span sec:authentication="name"></span>, вы вошли с правами доступа <span sec:authentication="principal.authorities"></span> </p>
     <hr class="my-4">
     <p>Выберете жалаемое действие</p>
