--- a/src/main/resources/templates/user/add_reserve_failed.html
+++ b/src/main/resources/templates/user/add_reserve_failed.html
@@ -1,33 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Упс</title>
-</head>
-<body>
-
-<p>
-    Бронь стола не возможна, в указанный ресторан на ваше время нет свободных столов.
-
-    Попробуйте повторить попытку, указав другое время или ресторан.
-</p>
-
-<nav>
-    <ul>
-
-        <li><a href="/">На главную</a></li>
-
-    </ul>
-</nav>
-
-</body>
-</html>
-
-<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Бронирование столика</title>
+    <title>Упсс</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
